Fix mobile landing (#113)
* Add padding to landing container

* Reduce vertical whitespace on mobile landing

* Make forms work better on mobile

* Pad everything nicely on mobile

* Lint

--- a/src/shared/scss/_base.scss
+++ b/src/shared/scss/_base.scss
@@ -86,7 +86,12 @@ figure {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    padding: 0 $margin;
     transition: opacity $transition;
     width: 100%;
+
+    @media (min-width: $breakpoint) {
+      padding: 0;
+    }
   }
 }
