--- a/src/shared/scss/_header.scss
+++ b/src/shared/scss/_header.scss
@@ -15,8 +15,12 @@ limitations under the License.
 */
 
 .header {
-  padding: 60px 0 40px;
+  padding: ($margin * 2) $margin ($margin * 2.5);
   position: relative;
+
+  @media (min-width: $breakpoint) {
+    padding: ($margin * 3.75) 0 ($margin * 2.5);
+  }
 
   .container {
     display: flex;
@@ -50,7 +54,7 @@ limitations under the License.
       display: inline-block;
       font-size: .9em;
       font-weight: 400;
-      margin: 0 0 $margin 0;
+      margin: 0 0 $margin;
 
       a {
         text-decoration: underline;
@@ -83,7 +87,8 @@ limitations under the License.
         display: flex;
         flex-direction: column;
 
-        > .button {
+        > * {
+          flex-grow: 1;
           width: 100%;
         }
       }
